--- a/weapp/apps/customerized_apps/event/templates/editor/events.html
+++ b/weapp/apps/customerized_apps/event/templates/editor/events.html
@@ -14,7 +14,7 @@
 		<div class="xui-form disT">
 			<div class="xui-col disTc">
 				<div class="xui-i-item">
-					<label class="">活动名称：</label>
+					<label class="">活动主题：</label>
 					<input type="text" class="form-control" id="name" name="name" value="" />
 				</div>
 			</div>
