--- a/weapp/apps/customerized_apps/lottery/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/lottery/templates/editor/workbench.html
@@ -44,6 +44,9 @@
         .propertyGroup_property_horizontalField .propertyGroup_property_label {
             width: 67px;
         }
+        .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control{
+            cursor: pointer;
+        }
     </style>
 {% endblock %}
 
