--- a/weapp/apps/customerized_apps/lottery/templates/editor/lottery_participances.html
+++ b/weapp/apps/customerized_apps/lottery/templates/editor/lottery_participances.html
@@ -40,7 +40,7 @@
 		</div>
 		<div class="xui-i-col">
 			<div class="xui-i-item ml10">
-				<label>活动时间
+				<label>抽奖时间
 				：</label>
 				<input
 					type="text"
