discard bug 4977 ，just change desc

--- a/weapp/apps/customerized_apps/lottery/templates/editor/lotteries.html
+++ b/weapp/apps/customerized_apps/lottery/templates/editor/lotteries.html
@@ -103,7 +103,7 @@
 				<th>开始时间</th>
 				<th>结束时间</th>
 				<th>状态</th>
-				<th>参与人数</th>
+				<th>参与次数</th>
 				<th>操作</th>
 			</tr>
 		</thead>
