修改字体颜色

--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/mileke_page.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/mileke_page.html
@@ -347,7 +347,7 @@
         </ul>
     </div>
         <div class="xui-myRanking f13 {% if not joined %} none {% endif %}">
-        <div class="fl">我的排名：第<span class="xui-myNum">{{current_index}}名</span></div>
+        <div class="fl">我的排名：第<span class="xui-myNum">{{current_index}}</span>名</div>
         <div class="fr">共获得<span class="xui-myNum">{{current_count}}</span>票</div>
     </div>
 </div>
