--- a/weapp/apps/customerized_apps/lottery/templates/editor/lotteries.html
+++ b/weapp/apps/customerized_apps/lottery/templates/editor/lotteries.html
@@ -14,7 +14,7 @@
 		<div class="xui-form disT">
 			<div class="xui-col disTc">
 				<div class="xui-i-item">
-					<label class="">名称：</label>
+					<label class="">活动名称：</label>
 					<input type="text" class="form-control" id="name" name="name" value="" />
 				</div>
 			</div>
@@ -99,7 +99,7 @@
 	<table class="table table-bordered xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg mb10">
 		<thead>
 			<tr>
-				<th>名称</th>
+				<th>活动名称</th>
 				<th>开始时间</th>
 				<th>结束时间</th>
 				<th>状态</th>
