店铺装修样式调整

--- a/weapp/termite/static/termite_js/app/component/wepage/item/item.html
+++ b/weapp/termite/static/termite_js/app/component/wepage/item/item.html
@@ -112,7 +112,7 @@
                     style="display:none;"
                     {% endif %}
                 {% endif %}
-            >¥{{product.display_price}}</p>
+            ><span>¥</span>{{product.display_price}}</p>
         </div>
     </a>
     {% endwith %}
