--- a/weapp/termite/static/termite_js/app/component/wepage/itemlist/itemlist.html
+++ b/weapp/termite/static/termite_js/app/component/wepage/itemlist/itemlist.html
@@ -36,7 +36,7 @@
                                 xui-border
                                 {% endif %}
                             {% endif %}
-                        {% endif %}">¥{% firstof product.display_price '234.0' %}</p>
+                        {% endif %}"><span>¥</span>{% firstof product.display_price '234.0' %}</p>
                     </div>
                     <div class="wa-inner-shopCar wui-inner-shopCar wui-shopCar-style{{component.model.style}}"></div>
                 </a>
