--- a/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
@@ -158,7 +158,7 @@
 					style="width:250px; height:60px;" 
 				>
 					<img src="${item.participant_icon}" />
-					{{html item.participant_name|safe}}
+					{{html item.participant_name}}
 				</td>
 				<td>
 					${item.created_at}
