--- a/weapp/mall/templates/mall/editor/promotion/coupons.html
+++ b/weapp/mall/templates/mall/editor/promotion/coupons.html
@@ -37,7 +37,7 @@
 		data-ui-role="advanced-table"
 		data-app="mall2"
 		data-resource="coupon_list"
-		data-args='{"id": {{ rule_id }}}'
+		data-args='{"id": {{ rule_id }},"is_max_page": {{ is_max_page }},"page": {{ page }}}'
 		data-template-id="#coupons_list_view"
 		data-enable-paginator="true"
 		data-enable-sort="false"
