修复商品详情多规格图片出现在微信图片浏览器中

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
@@ -262,7 +262,7 @@ a.xui-btn:link,a.xui-btn:hover,.xui-btn:visited{color:#fff!important;}
     <div class="xui-productInfo xa-upSlidePanel xui-upSlidePanel">
         <div class="pr">
             <div class="pa xui-productImg">
-                <img src="{{ product.thumbnails_url }}" alt="" width="90" height="90">
+                <img data-allow-autoplay=false src="{{ product.thumbnails_url }}" alt="" width="90" height="90">
             </div>
             <div class="" style="padding-left:103px;min-height: 75px;">
                 <p class="pt5 em95 xui-text-red xa-priceSection">
