--- a/weapp/apps/customerized_apps/event/templates/editor/events.html
+++ b/weapp/apps/customerized_apps/event/templates/editor/events.html
@@ -14,7 +14,7 @@
 		<div class="xui-form disT">
 			<div class="xui-col disTc">
 				<div class="xui-i-item">
-					<label class="">活动主题：</label>
+					<label class="">活动名称：</label>
 					<input type="text" class="form-control" id="name" name="name" value="" />
 				</div>
 			</div>
@@ -112,7 +112,7 @@
 	<table class="table table-bordered xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg mb10">
 		<thead>
 			<tr>
-				<th>活动主题</th>
+				<th>活动名称</th>
 				<th>参与人数</th>
 				<th>奖项类型</th>
 				<th>开始时间</th>
