显示库存OK，预留handler连接mall修改库存=:static_v2\js\view\apps_prize_selector_v4\view.js-->onChangeCouponCount

--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -633,14 +633,13 @@
                                         <div
                                             data-ui-role="apps-prize-selector-v4"
                                             data-prize='${JSON.stringify(dynamicComponent.model.get(dynamicComponentField.name))}'
-                                        ></div>
+                                        >
+                                        </div>
                                     {{if dynamicComponentField.help}}
                                     <div>
                                         {{html dynamicComponentField.help.replace(/\n/g, "<br/>")}}
                                     </div>
-                                    <div>追加库存</div>
                                     {{/if}}
-
                                     </div>
                                 </div>
                                 {{/if}}
