--- a/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
@@ -142,7 +142,7 @@
     </div>
 
     <div class="wui-SignDescriptionDiv">
-        <div class="wui-SignDescriptionDiv Chr">今日可以领取<span class="daily_points">x</span>积分，"<span class="daily_prizes">5元优惠劵</span>"一张</div>
+        <div class="wui-SignDescriptionDiv Chr">今日可以领取<span class="daily_points wa-daily_points"></span>积分，<span class="daily_prizes wa-daily_prizes"></span></div>
     </div>
 </div>
 {% endifequal %}
