--- a/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
@@ -116,7 +116,7 @@
 {% endblock %}
 
 {% ifequal component.type 'appkit.signdescription' %}
-<div class="wui-SignPageDiv">
+<div class="wui-SignPageDiv wa-signPageDiv">
     <div class="wui-TopPaneDiv">
         <div class="wui-UserPhotoDiv">
             <div class="wui-UserPhotoCircle wa-user-icon">
@@ -125,9 +125,9 @@
         </div>
         <div class="wui-UserName Chr wa-username"><p>用户名</p></div>
         <div class="wui-UserPointDiv">
-            <p class="wui-UserPoint Chr">积分:<span class="wui-TotalPoints Chr wa-user-integral">0</span></p>
+            <p class="wui-UserPoint Chr">积分:<span class="wui-TotalPoints Chr wa-user-integral"></span></p>
         </div>
-        <div class="wui-Rules Border">
+        <div class="wui-Rules Border wa-rules">
             <div class="wui-Rules Chr">活动规则<span class="fa fa-chevron-circle-right"></span></div>
 
         </div>
