修改红包分析的filter

--- a/weapp/mall/templates/mall/editor/red_envelope_participences.html
+++ b/weapp/mall/templates/mall/editor/red_envelope_participences.html
@@ -21,43 +21,7 @@
 			<li class="active">查看结果</li>
 		</ul>
 	</div>
-	<div class="xui-filterPanel pb10 mb15">
-		<div class="xui-form disT">
-			<div class="xui-col disTc">
-				<div class="xui-i-item">
-					<label class="">下单会员：</label>
-					<input type="text" class="form-control" id="participant_name" name="participant_name" value="" />
-				</div>
-			</div>
-			<div class="xui-col disTc">
-				<div class="xui-i-item ml20">
-					<label>会员状态：</label>
-					<select class="" id="member_status" name="member_status">
-						<option value="-1">所有会员</option>
-						<option value="0">非会员</option>
-						<option value="1">新会员</option>
-						<option value="2">普通会员</option>
-						<option value="3">铜牌会员</option>
-						<option value="4">钻石会员</option>
-					</select>
-				</div>
-			</div>
-			<div class="xui-col disTc">
-				<div class="xui-i-item ml20">
-					<label>使用状态：</label>
-					<select class="" id="red_envelope_status" name="red_envelope_status">
-						<option value="-1">所有状态</option>
-						<option value="0">未使用</option>
-						<option value="1">已使用</option>
-					</select>
-				</div>
-			</div>
-		</div>
-		<div class="xui-btn-group">
-			<a class="btn btn-primary mr40 xa-search xui-fontBold" href="javascript:void(0);">查&nbsp;&nbsp;&nbsp;询</a>
-			<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">重&nbsp;&nbsp;&nbsp;置</a>
-		</div>
-	</div>
+	<div class="xa-redMemberFilterView xui-filterPanel pb10 mb15"></div>
     <div class="panel panel-default xui-tableBox">
 		<div class="fans_data_title"><div class="fans_data_name ml10 mt10 mr5">{{ red_envelope_name }}</div>
 			<div class="fans_data_date">({{ red_envelope_start_time }}至{{ red_envelope_end_time }})</div>
@@ -81,7 +45,7 @@
             data-ui-role="advanced-table"
             data-app="apps/promotion"
             data-resource="red_envelope_participances"
-            data-args='{"id": "{{red_envelope_id}}"}'
+            data-args='{"id": "{{red_envelope_id}}","receive_method": "{{receive_method}}"}'
             data-template-id="#red_envelope_participances_view"
             data-enable-paginator="true"
             data-enable-sort="false"
@@ -124,14 +88,14 @@
 			<tr data-id="${item.id}" class="xa-selectTr">
 			<td style="position:relative;" >
 				<div class="column_block xui-memberHeader pr">
-					<a target="_blank" href="">
+					<a target="_blank" href="/member/member_detail/edit/?id=${item.member_id}">
 						<img width="41" height="41" src="${item.participant_icon}" /><br>
 						{{html item.participant_name}}
 					</a>
 				</div>
 			</td>
 				<td>
-
+					${item.grade}
 				</td>
 				<td>
 
@@ -171,6 +135,11 @@
 
 <script type="text/javascript">
 $(document).ready(function() {
+	var view = new W.view.mall.redMemberFilterView({
+        el: '.xa-redMemberFilterView',
+		dataView: $('[data-ui-role="advanced-table"]').data('view'),
+		status:''
+    });
 	$('.panel-body').delegate('.xa-detail', 'click', function(event){
 		var member_name = $(event.currentTarget).data('member-name');
 		console.log(member_name);
