--- a/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
+++ b/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
@@ -88,6 +88,50 @@
     }
     .wui-rules-div{
         display: none;
+        margin-left: 10%;
+        margin-right: 10%;
+        font-family: STHeiti;
+        color:#6D6D6D;
+    }
+    .wui-rules-intro-div,.wui-rules-rules-div{
+        margin-top: 10px;
+    }
+    .wui-rules-i-title{
+        font-size: 1.2em;
+        font-weight: bold;
+        color:#4E4E4E;
+    }
+    .wui-rules-i-content{
+        margin-left: 20%;
+    }
+
+    .wui-rules-footer-div{
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        margin-top: 35px;
+    }
+    .wui-rules-i-desc{
+        font-style: bold;
+    }
+    .wui-rules-footer-div .wui-rules-i-center{
+        color:red;
+    }
+    .wui-rules-i-btn{
+        margin-top: 10px;
+    }
+    .wui-btn.wui-btn-back{
+        height: 50px;
+        width: 155px;
+        color: #FFF;
+        background: #0090D6 none repeat scroll 0% 0%;
+        text-align: center;
+        line-height: 50px;
+        border:0px;
+        border-radius: 3px;
+        font-size: 1.2em;
+        font-style: bold;
     }
 </style>
 {% endblock %}
@@ -114,7 +158,25 @@
             <button type="button" class="wui-i-dialog-btn wui-i-closeDialog xa-closeDialog xa-closeBtn">知道了</button>
         </div>
     </div>
-    <div class="wui-rules-div wa-rules-div"></div>
+    <div class="wui-rules-div wa-rules-div">
+        <div class="wui-rules-intro-div">
+            <p class="wui-rules-i-title">签到说明</p>
+            <p class="wui-rules-i-content">签到有礼！</p>
+        </div>
+        <div class="wui-rules-rules-div">
+            <p class="wui-rules-i-title">活动规则</p>
+            <ol class="wui-rules-i-content">
+                <li>1.每日签到获得20积分</li>
+                <li>1.每日签到获得20积分</li>
+                <li>1.每日签到获得20积分</li>
+                <li>1.每日签到获得20积分</li>
+            </ol>
+        </div>
+        <div class="wui-rules-footer-div">
+            <div class="wui-rules-i-desc">备注:签到奖励可以到<a class="wui-rules-i-center">个人中心</a>查看</div>
+            <div class="wui-rules-i-btn"><button class="wui-btn wui-btn-back">返回签到</button></div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block js %}
