--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -63,6 +63,19 @@
         .xui-outerFunctionTrigger,.groupHelp_tip{
             margin-left: 5px;
         }
+        .propertyGroup_property_horizontalField .propertyGroup_property_label{
+            width:90px;
+        }
+        .propertyGroup_property_dynamicControlField_control,.propertyGroup_property_dynamicControlField_content.xui-text{
+            width:495px;
+            height:129px;
+        }
+        .propertyGroup_property_dynamicControlField_content.xui-text{
+            padding-left: 34px;
+        }
+        .mr5.xa-addDynamicComponent.xui-addDynamicComponent{
+            width:495px;
+        }
     </style>
 {% endblock %}
 
