--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -307,7 +307,7 @@
       
       loadPages(pageManagerView);
 
-      $('.xa-save').click(function() {
+      $('.xui-bottomActionBar').delegate('.xa-save', 'click', function() {
         // 保存model
         W.Synchronizer.manualSync(function(page, data) {
         var descriptionModel = page.components[0].model;
