--- a/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
+++ b/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
@@ -270,7 +270,7 @@
                         alert('参与成功');
                     },
                     error: function(data) {
-                        alert('参与失败');
+                        console.log(data);
                     }
                 });
                 resultDialog.render(true, {});
