--- a/weapp/weixin2/templates/weixin/message/realtime_messages.html
+++ b/weapp/weixin2/templates/weixin/message/realtime_messages.html
@@ -69,12 +69,12 @@
 									<span style="width:41px;width:41px;">已跑路</span>
 									</div>
 								{{/if}}
-								<a {{if !message.fast_reply}}href="/member/detail/?id=${message.member_id}" target="_blank"{{/if}}><img src="${message.user_icon}" width="60" height="60"/></a>
+								<a {{if !message.fast_reply}}href="{{if message.member_id}}/member/detail/?id=${message.member_id}{{else}}javascript:void(0);{{/if}}" {{if message.member_id}}target="_blank"{{/if}} {{/if}}><img src="${message.user_icon}" width="60" height="60"/></a>
 							</div>
 							<div class="pl15 disTc xui-i-name pa">
 								<div class="xui-i-member-username" class="mb0 mt0" style="height:35px;">
 									{{if !message.fast_reply}}
-										<a href="/member/detail/?id=${message.member_id}" class="mb0" target="_blank" style="line-height:16px;">{{html message.name}}</a>
+										<a href="{{if message.member_id}}/member/detail/?id=${message.member_id}{{else}}javascript:void(0);{{/if}}" class="mb0" {{if message.member_id}}target="_blank"{{/if}} style="line-height:16px;">{{html message.name}}</a>
 									{{else}}
 										<p class="mb0" style="line-height:16px;">{{html message.mp_username}}</p>
 									{{/if}}
