需求 5104： 1、数据罗盘-会员分析-会员总数跳转到会员列表页后显示全部会员的数据 2、微信-微信概况-总会员跳转到会员列表页后显示全部会员的数据

--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -429,7 +429,7 @@ $(document).ready(function() {
 		el: '.xui-filterPanel',
 		dataView: $('[data-ui-role="advanced-table"]').data('view'),
 		userWebappId: {{user.get_profile.webapp_id}},
-		status:''
+		status:'{{status}}'
 	});
 	view.$el.bind('end_click', function(){
 		DATA_INTERVAL = '';
