动态组件样式2

--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -66,21 +66,43 @@
         .propertyGroup_property_horizontalField .propertyGroup_property_label{
             width:90px;
         }
+        .propertyGroup.xui-propertyView-app-SignSettingGroup{
+            width:480px;
+        }
         .propertyGroup_property_dynamicControlField_control,.propertyGroup_property_dynamicControlField_content.xui-text{
-            width:495px;
+            width:480px;
             height:129px;
         }
         .propertyGroup_property_dynamicControlField_content.xui-text{
             padding-left: 34px;
         }
         .mr5.xa-addDynamicComponent.xui-addDynamicComponent{
-            width:495px;
+            width:480px;
+        }
+        .propertyGroup_property_textareaField{
+            margin-left: 40px;
+        }
+        .propertyGroup_property_textareaField .propertyGroup_property_label{
+            width:60px;
+        }
+        .propertyGroup.xui-propertyView-app-SignNameGroup .input-small.xui-propertyGroup-input{
+            width:310px !important;
+        }
+        .propertyGroup_property_input.pl5{
+            width: 330px !important;
+            margin: 5px auto !important;
+            margin-top: -16px !important;
+        }
+        .propertyGroup_property_dynamicControlField_content.xui-text{
+         padding-top: 16px;
         }
     </style>
 {% endblock %}
 
 {% block content-panel %}
-<div id="workbench" class="xui-wepage-workbenchPage clearfix pr xui-appPage-commonStyle">
+<div id="workbench" class="xui-wepage-workbenchPage clearfix pr x
+
+ui-appPage-commonStyle">
   <div class="relative">
     <ul class="breadcrumb">
       <li>您当前所在位置</li>
